--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,3 +85,8 @@
 
 /* Uncomment out the line below to help debug layout issues */
 /*@import './imports/_debug';*/
+
+/* Custom CSS */
+.navtitle {
+  text-decoration: none;
+}
