--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
+			<span class="db w4 center mb4 br0"><i class="fas fa-leaf"></i>双葉家庭教師</span>
 			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
 			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
 
